pcmtools (1.2+dfsg.1-1) UNRELEASED; urgency=low

  * UNRELEASED
  * New upstream version 1.2+dfsg.1
  * debian/repack: Cleanup auto-generated manpages from upstream.
  * debian/watch: Respect DFSG version extension.
  * debian/rules: Handle Git dependency on demand. There are hard
    bindings inside the configuration and build process that have
    to respect; without this, for example the manpage generation
    would be fail.
  * debian/patches: Backport 1.3 changes for DejaGnu.
  * debian/rules: Enable auto-reconfiguration to cache the backport.

 --

pcmtools (1.1-1) unstable; urgency=low

  * New upstream version 1.1
  * debian/pcmtools.lintian-overrides: Rename all mkzg* to mkcg.*.
  * debian/pcmtools.lintian-overrides: Remove hardening related entries.
  * debian/rules: Install ChangeLog with valid file name and compress
    both ChangeLog files, the old one and the new with ongoing content.

 -- Stephan Linz <linz@li-pro.net>  Sun, 26 Jan 2020 12:57:43 +0100

pcmtools (1.0-1) unstable; urgency=medium

  * Initial release (Closes: #730401).

 -- Stephan Linz <linz@li-pro.net>  Sat, 25 Jan 2020 15:07:19 +0100